[package]
name = "desktop"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
freedesktop-desktop-entry = "0.5.0"
rmenu-plugin = { version = "0.0.0", path = "../rmenu-plugin" }
rust-ini = { version = "0.19.0", features = ["unicase"] }
serde_json = "1.0.103"
shellexpand = "3.1.0"
thiserror = "1.0.44"
walkdir = "2.3.3"
