[package]
name = "desktop"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
freedesktop-desktop-entry = "0.5.0"
freedesktop-icons = "0.2.3"
log = "0.4.19"
once_cell = "1.18.0"
regex = "1.9.1"
rmenu-plugin = { version = "0.0.1", path = "../rmenu-plugin" }
rust-ini = "0.19.0"
serde_json = "1.0.104"
shellexpand = "3.1.0"
thiserror = "1.0.44"
walkdir = "2.3.3"
