[package]
name = "desktop"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
freedesktop-desktop-entry = "0.5.2"
freedesktop-icons = "0.2.6"
log = "0.4.21"
once_cell = "1.19.0"
rayon = "1.10.0"
regex = "1.10.4"
rmenu-plugin = { version = "0.0.2", path = "../rmenu-plugin" }
rust-ini = "0.21.0"
serde_json = "1.0.117"
shellexpand = "3.1.0"
thiserror = "1.0.61"
walkdir = "2.5.0"
