[package]
name = "rmenu-network"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-std = "1.12.0"
clap = { version = "4.3.21", features = ["derive"] }
dioxus = "0.4.0"
dioxus-desktop = "0.4.0"
dioxus-free-icons = { version = "0.7.0", features = ["font-awesome-regular"] }
env_logger = "0.10.0"
futures-channel = "0.3.28"
glib = { git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.19.0" }
keyboard-types = "0.6.2"
log = "0.4.20"
nm = { git = "https://github.com/balena-io-modules/libnm-rs.git", version = "0.4.0" }
once_cell = "1.18.0"
rmenu-plugin = { version = "0.0.0", path = "../rmenu-plugin" }
serde_json = "1.0.104"
