[package]
name = "network"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-std = "1.12.0"
clap = { version = "4.5.4", features = ["derive"] }
dioxus = { version = "0.6.3", features = ["desktop"] }
dioxus-desktop = "0.6.3"
dioxus-free-icons = { version = "0.9.0", features = ["font-awesome-regular"] }
dioxus-html = "0.6.3"
env_logger = "0.11.3"
futures-channel = "0.3.30"
glib = { git = "https://github.com/gtk-rs/gtk-rs-core", rev = 'cab7e1c549675cbe98af461ebbcc04c33c8f1295' }
keyboard-types = "0.7.0"
log = "0.4.21"
nm = { git = "https://github.com/imgurbot12/libnm-rs.git", version = "0.4.0" }
once_cell = "1.19.0"
rmenu-plugin = { version = "0.0.2", path = "../rmenu-plugin" }
serde_json = "1.0.117"
