[package]
name = "rmenu-plugin"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rmenu_plugin"
path = "src/lib.rs"

[[bin]]
name = "rmenu-build"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
