[package]
name = "rmenu-plugin"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rmenu_plugin"
path = "src/lib.rs"

[[bin]]
name = "rmenu-build"
path = "src/bin/main.rs"

[features]
extra = ["dep:clipboard-win"]

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.37", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[target.'cfg(windows)'.dependencies]
clipboard-win = { version = "5.4.0", optional = true }
