[package]
name    = "rmenu"
version = "1.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.55.1"
clap = { version = "4.5.4", features = ["derive", "env"] }
dioxus = { version = "0.6.3", features = ["desktop"] }
dioxus-desktop = "0.6.3"
env_logger = "0.11.3"
heck = "0.5.0"
lastlog = { git = "https://github.com/imgurbot12/lastlog", version = "0.3.0", features = ["libc"] }
log = "0.4.21"
once_cell = "1.19.0"
png = "0.17.13"
regex = { version = "1.10.4" }
resvg = { version = "0.45.0", default-features = false, features = ["raster-images", "default"] }
rmenu-plugin = { version = "0.0.2", path = "../rmenu-plugin" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
shell-words = "1.1.0"
shellexpand = "3.1.0"
strfmt = "0.2.4"
thiserror = "2.0.12"
tokio = { version = "*", default-features = false, features = ["time"] }
which = "7.0.2"
xdg = "2.5.2"
