[package]
name    = "rmenu"
version = "1.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.55.1"
clap = { version = "4.5.37", features = ["derive", "env"] }
dioxus = { version = "0.6.3", features = ["desktop"] }
dioxus-desktop = "0.6.3"
env_logger = "0.11.8"
heck = "0.5.0"
lastlog = { git = "https://github.com/imgurbot12/lastlog", version = "0.3.0", features = ["libc"] }
log = "0.4.27"
once_cell = "1.21.3"
png = "0.17.16"
regex = { version = "1.11.1" }
resvg = { version = "0.45.1", default-features = false, features = ["raster-images", "default"] }
rmenu-plugin = { version = "0.0.3", path = "../rmenu-plugin" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
shell-words = "1.1.0"
shellexpand = "3.1.1"
strfmt = "0.2.4"
thiserror = "2.0.12"
tokio = { version = "*", default-features = false, features = ["time"] }
which = "7.0.3"
xdg = "2.5.2"
