[package]
name = "rmenu-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cache = ["dep:bincode", "dep:serde"]
rmenu_internals = ["dep:libloading"]

[dependencies]
abi_stable = "0.11.1"
bincode = { version = "1.3.3", optional = true }
lastlog = { version = "0.2.3", features = ["libc"] }
libloading = { version = "0.7.4", optional = true }
serde = { version = "1.0.152", features = ["derive"], optional = true }
