[package]
name = "desktop"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
env_logger = "0.11.8"
freedesktop-desktop-entry = "0.7.11"
itertools = "0.14.0"
log = "0.4.27"
once_cell = "1.21.3"
png = "0.17.16"
rayon = "1.10.0"
regex = "1.11.1"
resvg = "0.45.1"
rmenu-plugin = { version = "0.0.3", path = "../../rmenu-plugin" }
rust-ini = "0.21.1"
serde_json = "1.0.140"
shellexpand = "3.1.1"
thiserror = "2.0.12"
walkdir = "2.5.0"
xdg = "2.5.2"
