[package]
name = "drun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
abi_stable = "0.11.1"
freedesktop_entry_parser = "1.3.0"
regex = "1.7.0"
rmenu-plugin = { version = "0.1.0", path = "../../crates/rmenu-plugin", features = ["cache"] }
walkdir = "2.3.2"
