[package]
name = "emoji"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
emojis = "0.6.4"
rmenu-plugin = { version = "0.0.3", path = "../../rmenu-plugin" }
serde_json = "1.0.140"
which = "7.0.2"
