[package]
name = "search"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
env_logger = "0.11.8"
fend-core = { git = "https://github.com/printfn/fend", tag = "v1.5.6", version = "1.5.6" }
log = "0.4.27"
rand = "0.9.1"
regex = "1.11.1"
rmenu-plugin = { version = "0.0.3", path = "../../rmenu-plugin", features = ["extra"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
url-escape = "0.1.1"
