[package]
name = "window"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["sway", "hyprland"]
sway = []
hyprland = []

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
rmenu-plugin = { version = "0.0.2", path = "../../rmenu-plugin" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
