[package]
name = "window"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["sway", "hyprland"]
sway = []
hyprland = []

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
rmenu-plugin = { version = "0.0.3", path = "../../rmenu-plugin" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
